Update Inal's Subclassing API CNN Time Series Classification.ipynb

--- a/Inal's Subclassing API CNN Time Series Classification.ipynb
+++ b/Inal's Subclassing API CNN Time Series Classification.ipynb
@@ -124,7 +124,7 @@
         "    self.n_classes = n_classes\n",
         "    self.dropout = dropout\n",
         "\n",
-        "    self.conv1 = keras.layers.Conv1D(filters = 32, kernel_size = 2, input_shape = x_train[1:], use_bias = True, activation = 'relu')\n",
+        "    self.conv1 = keras.layers.Conv1D(filters = 32, kernel_size = 2, use_bias = True, activation = 'relu')\n",
         "    self.maxpool1 = keras.layers.MaxPool1D(pool_size=2)\n",
         "    self.dense1 = keras.layers.Dense(n_neurons, activation = 'relu')\n",
         "    self.dropout1 = keras.layers.Dropout(dropout)\n",
